--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<app-header></app-header>
+<app-header (navSection)="onSectionChange($event)"></app-header>
 
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <app-recipes></app-recipes>
-      <app-shopping-list></app-shopping-list>
+      <app-recipes *ngIf="showSection === 'recipes'"></app-recipes>
+      <app-shopping-list *ngIf="showSection === 'shopping'"></app-shopping-list>
     </div>
   </div>
 </div>
