Add services section of project

--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -15,10 +15,10 @@
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success"
+          <button class="btn btn-success" type="button"
             (click)="onClickAdd()">Add</button>
-          <button class="btn btn-danger">Delete</button>
-          <button class="btn btn-primary">Clear</button>
+          <button class="btn btn-danger" type="button">Delete</button>
+          <button class="btn btn-primary" type="button">Clear</button>
         </div>
       </div>
     </form>
