--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <app-recipes *ngIf="showSection === 'recipes'"></app-recipes>
-      <app-shopping-list *ngIf="showSection === 'shopping'"></app-shopping-list>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
