--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header (navSection)="onSectionChange($event)"></app-header>
+<app-header></app-header>
 
 <div class="container">
   <div class="row">
