--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <button class="btn btn-success">New Recipe</button>
+    <button class="btn btn-success" routerLink="new">New Recipe</button>
   </div>
 </div>
 
@@ -8,7 +8,8 @@
 
 <div class="row">
   <div class="col-xs-12">
-    <app-recipe-item *ngFor="let recipe of recipes" [recipe]="recipe" (recipeSelected)="onRelayRecipe(recipe)">
+    <app-recipe-item *ngFor="let recipe of recipes; let i = index"
+                     [recipe]="recipe" (recipeSelected)="onRelayRecipe(recipe)" [index]="i">
     </app-recipe-item>
   </div>
 </div>
