--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -4,7 +4,8 @@
     <hr>
     <ul class="list-group">
       <li class="list-group-item" style="cursor: pointer"
-      *ngFor="let ingredient of ingredients">{{ingredient.name}} ({{ingredient.amount}})</li>
+      *ngFor="let ingredient of ingredients; let i = index" (click)="onEditItem(i)">
+        {{ingredient.name}} ({{ingredient.amount}})</li>
     </ul>
   </div>
 </div>
