--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -3,15 +3,15 @@
     <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type="submit">Save</button>
-          <button class="btn btn-danger" type="button">Cancel</button>
+          <button class="btn btn-success" type="submit" [disabled]="!recipeForm.valid">Save</button>
+          <button class="btn btn-danger" type="button" (click)="onCancel()">Cancel</button>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
           <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" id="name" class="form-control" formControlName="name">
+            <input type="text" id="name" class="form-control" formControlName="name" #name>
           </div>
         </div>
       </div>
@@ -19,13 +19,13 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="imagePath">Image URL</label>
-            <input type="text" id="imagePath" class="form-control" formControlName="imagePath">
+            <input type="text" id="imagePath" class="form-control" formControlName="imagePath" #imagePath>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <img src="" alt="" class="img-responsive">
+          <img [src]="imagePath.value" [alt]="name.value" class="img-responsive">
         </div>
       </div>
       <div class="row">
@@ -40,7 +40,7 @@
       <div class="row">
         <div class="col-xs-12" formArrayName="ingredients">
           <div class="row" *ngFor="let ingredient of recipeForm.get('ingredients').controls; let i = index"
-               [formGroupName]="i">
+               [formGroupName]="i" style="margin-top: 10px;">
             <div class="col-xs-8">
               <input type="text" class="form-control" formControlName="name">
             </div>
@@ -48,9 +48,15 @@
               <input type="number" class="form-control" formControlName="amount">
             </div>
             <div class="col-xs-2">
-              <button class="btn btn-danger">X</button>
+              <button class="btn btn-danger" type="button" (click)="onDeleteIngredient(i)">X</button>
             </div>
           </div>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col-xs-12">
+          <button class="btn btn-success" type="button" (click)="onAddIngredient()">Add Ingredient</button>
         </div>
       </div>
     </form>
