Add authentication modules

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,6 +10,11 @@
         <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <ng-template [ngIf]="!authService.isAuthenticated()">
+          <li><a routerLink="/signin">Sign in</a></li>
+          <li><a routerLink="/signup">Register</a></li>
+        </ng-template>
+        <li><a style="cursor: pointer" (click)="onLogout()" *ngIf="authService.isAuthenticated()">Log out</a></li>
         <li class="dropdown" appDropdown>
           <a class="dropdown-toggle" role="button" style="cursor: pointer">Manage <span class="caret"></span></a>
           <ul class="dropdown-menu">
